refact: inject dependencies with tsyrynge
